--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^8.4.1",
     "joy": "^0.1.1",
     "nodemon": "^1.9.2",
+    "twitter": "^1.3.0",
     "uuid": "^2.0.2",
     "vision": "^4.1.0"
   }
